--- a/Analytics/00 Modeller.ipynb
+++ b/Analytics/00 Modeller.ipynb
@@ -121,332 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATION</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>HourlyWindDirection</th>\n",
-       "      <th>HourlyWindSpeed</th>\n",
-       "      <th>horizontal_wind</th>\n",
-       "      <th>vertical_wind</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>0</td>\n",
-       "      <td>91.449275</td>\n",
-       "      <td>3.782609</td>\n",
-       "      <td>-0.095669</td>\n",
-       "      <td>3.781399</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>1</td>\n",
-       "      <td>83.333333</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.348279</td>\n",
-       "      <td>2.979715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>2</td>\n",
-       "      <td>99.487179</td>\n",
-       "      <td>3.564103</td>\n",
-       "      <td>-0.587460</td>\n",
-       "      <td>3.515355</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>3</td>\n",
-       "      <td>68.750000</td>\n",
-       "      <td>3.125000</td>\n",
-       "      <td>1.132619</td>\n",
-       "      <td>2.912525</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>4</td>\n",
-       "      <td>87.906977</td>\n",
-       "      <td>2.976744</td>\n",
-       "      <td>0.108717</td>\n",
-       "      <td>2.974758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>5</td>\n",
-       "      <td>91.515152</td>\n",
-       "      <td>4.575758</td>\n",
-       "      <td>-0.120989</td>\n",
-       "      <td>4.574158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>6</td>\n",
-       "      <td>132.456140</td>\n",
-       "      <td>4.649123</td>\n",
-       "      <td>-3.138277</td>\n",
-       "      <td>3.430096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>7</td>\n",
-       "      <td>177.419355</td>\n",
-       "      <td>6.322581</td>\n",
-       "      <td>-6.316169</td>\n",
-       "      <td>0.284678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>8</td>\n",
-       "      <td>190.937500</td>\n",
-       "      <td>6.468750</td>\n",
-       "      <td>-6.351243</td>\n",
-       "      <td>-1.227368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>9</td>\n",
-       "      <td>163.333333</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>-6.705927</td>\n",
-       "      <td>2.007623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>10</td>\n",
-       "      <td>162.941176</td>\n",
-       "      <td>7.441176</td>\n",
-       "      <td>-7.113795</td>\n",
-       "      <td>2.182894</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>11</td>\n",
-       "      <td>172.758621</td>\n",
-       "      <td>7.793103</td>\n",
-       "      <td>-7.730945</td>\n",
-       "      <td>0.982318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>12</td>\n",
-       "      <td>179.583333</td>\n",
-       "      <td>8.104167</td>\n",
-       "      <td>-8.103952</td>\n",
-       "      <td>0.058935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>13</td>\n",
-       "      <td>183.846154</td>\n",
-       "      <td>7.923077</td>\n",
-       "      <td>-7.905232</td>\n",
-       "      <td>-0.531461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>14</td>\n",
-       "      <td>145.000000</td>\n",
-       "      <td>7.800000</td>\n",
-       "      <td>-6.389386</td>\n",
-       "      <td>4.473896</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>15</td>\n",
-       "      <td>171.875000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>-7.919697</td>\n",
-       "      <td>1.130666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>16</td>\n",
-       "      <td>164.516129</td>\n",
-       "      <td>7.967742</td>\n",
-       "      <td>-7.678558</td>\n",
-       "      <td>2.127125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>17</td>\n",
-       "      <td>202.000000</td>\n",
-       "      <td>7.571429</td>\n",
-       "      <td>-7.020106</td>\n",
-       "      <td>-2.836307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>18</td>\n",
-       "      <td>167.692308</td>\n",
-       "      <td>6.015385</td>\n",
-       "      <td>-5.877133</td>\n",
-       "      <td>1.282249</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>19</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>4.941176</td>\n",
-       "      <td>-0.858026</td>\n",
-       "      <td>4.866109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>20</td>\n",
-       "      <td>90.588235</td>\n",
-       "      <td>4.823529</td>\n",
-       "      <td>-0.049521</td>\n",
-       "      <td>4.823275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>21</td>\n",
-       "      <td>80.833333</td>\n",
-       "      <td>5.583333</td>\n",
-       "      <td>0.889463</td>\n",
-       "      <td>5.512029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>22</td>\n",
-       "      <td>93.333333</td>\n",
-       "      <td>4.090909</td>\n",
-       "      <td>-0.237865</td>\n",
-       "      <td>4.083988</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>72641014837</td>\n",
-       "      <td>23</td>\n",
-       "      <td>112.352941</td>\n",
-       "      <td>4.764706</td>\n",
-       "      <td>-1.812070</td>\n",
-       "      <td>4.406680</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        STATION  hour  HourlyWindDirection  HourlyWindSpeed  horizontal_wind  \\\n",
-       "0   72641014837     0            91.449275         3.782609        -0.095669   \n",
-       "1   72641014837     1            83.333333         3.000000         0.348279   \n",
-       "2   72641014837     2            99.487179         3.564103        -0.587460   \n",
-       "3   72641014837     3            68.750000         3.125000         1.132619   \n",
-       "4   72641014837     4            87.906977         2.976744         0.108717   \n",
-       "5   72641014837     5            91.515152         4.575758        -0.120989   \n",
-       "6   72641014837     6           132.456140         4.649123        -3.138277   \n",
-       "7   72641014837     7           177.419355         6.322581        -6.316169   \n",
-       "8   72641014837     8           190.937500         6.468750        -6.351243   \n",
-       "9   72641014837     9           163.333333         7.000000        -6.705927   \n",
-       "10  72641014837    10           162.941176         7.441176        -7.113795   \n",
-       "11  72641014837    11           172.758621         7.793103        -7.730945   \n",
-       "12  72641014837    12           179.583333         8.104167        -8.103952   \n",
-       "13  72641014837    13           183.846154         7.923077        -7.905232   \n",
-       "14  72641014837    14           145.000000         7.800000        -6.389386   \n",
-       "15  72641014837    15           171.875000         8.000000        -7.919697   \n",
-       "16  72641014837    16           164.516129         7.967742        -7.678558   \n",
-       "17  72641014837    17           202.000000         7.571429        -7.020106   \n",
-       "18  72641014837    18           167.692308         6.015385        -5.877133   \n",
-       "19  72641014837    19           100.000000         4.941176        -0.858026   \n",
-       "20  72641014837    20            90.588235         4.823529        -0.049521   \n",
-       "21  72641014837    21            80.833333         5.583333         0.889463   \n",
-       "22  72641014837    22            93.333333         4.090909        -0.237865   \n",
-       "23  72641014837    23           112.352941         4.764706        -1.812070   \n",
-       "\n",
-       "    vertical_wind  \n",
-       "0        3.781399  \n",
-       "1        2.979715  \n",
-       "2        3.515355  \n",
-       "3        2.912525  \n",
-       "4        2.974758  \n",
-       "5        4.574158  \n",
-       "6        3.430096  \n",
-       "7        0.284678  \n",
-       "8       -1.227368  \n",
-       "9        2.007623  \n",
-       "10       2.182894  \n",
-       "11       0.982318  \n",
-       "12       0.058935  \n",
-       "13      -0.531461  \n",
-       "14       4.473896  \n",
-       "15       1.130666  \n",
-       "16       2.127125  \n",
-       "17      -2.836307  \n",
-       "18       1.282249  \n",
-       "19       4.866109  \n",
-       "20       4.823275  \n",
-       "21       5.512029  \n",
-       "22       4.083988  \n",
-       "23       4.406680  "
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wind_data_mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qr/fds_zg7j76g51mq0zmqdqfnc0000gn/T/ipykernel_75218/2098376730.py:4: DtypeWarning:\n",
+      "/var/folders/qr/fds_zg7j76g51mq0zmqdqfnc0000gn/T/ipykernel_75218/15239590.py:4: DtypeWarning:\n",
       "\n",
       "Columns (3,21,27,28,29,31,32,33,38,42,43,44,49,50,52,54,56,64,70,72,73,74,76,77,89,90,96,97,98,99,100,101,102,103,104,105,106,107,108) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "\n"
@@ -477,8 +159,9 @@
     "wind_data_mean = wind_data_seg.groupby(['STATION','hour']).mean().reset_index()\n",
     "wind_data_mean['horizontal_wind'] =wind_data_mean['HourlyWindSpeed'] * np.cos(np.radians(wind_data_mean['HourlyWindDirection']))\n",
     "wind_data_mean['vertical_wind'] =wind_data_mean['HourlyWindSpeed'] * np.sin(np.radians(wind_data_mean['HourlyWindDirection']))\n",
+    "# wind_data_mean.to_csv('Analytics/temp_data/wind_data_mean.csv',index=False)\n",
     "# wind_data_mean = wind_data_mean[[ 'hour', 'horizontal_wind', 'vertical_wind']]\n",
-    "# wind_data_mean.to_csv('Analytics/temp_data/wind_data_mean.csv',index=False)"
+    "wind_data_mean.to_csv('Analytics/temp_data/wind_data_mean.csv',index=False)"
    ]
   },
   {
