--- a/Analytics/Test.ipynb
+++ b/Analytics/Test.ipynb
@@ -5016,18 +5016,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'station' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(\u001b[43mstation\u001b[49m\u001b[38;5;241m.\u001b[39mprediction_temps\u001b[38;5;241m.\u001b[39miloc[:\u001b[38;5;241m100\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'station' is not defined"
+     ]
+    }
+   ],
    "source": [
     "len(station.prediction_temps.iloc[:100])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bulk_model_runner' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 34>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m xgb_model \u001b[38;5;241m=\u001b[39m GBR()\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# xgb_model = xgb.XGBRegressor(**params)\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m model_dict \u001b[38;5;241m=\u001b[39m \u001b[43mbulk_model_runner\u001b[49m(xgb_model,grouped_data,col_list,bulk_mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,delete\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,residuals\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     35\u001b[0m visualizer\u001b[38;5;241m.\u001b[39mplot_mean(model_dict,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGBR\u001b[39m\u001b[38;5;124m'\u001b[39m,col_list)\n\u001b[1;32m     38\u001b[0m recent_folder \u001b[38;5;241m=\u001b[39m get_recent(MODEL_PATH)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bulk_model_runner' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import GradientBoostingRegressor as GBR\n",
     "month = 6\n",
@@ -5051,10 +5075,10 @@
     "            # 'closest_station_1_temp',\n",
     "        #   'closest_1_distance',\n",
     "      #  'day_of_year', \n",
-    "       'adjusted_lst',\n",
-    "       'valueImperviousfraction', 'valueTreefraction', 'valueBuildingheight',\n",
+    "    #    'adjusted_lst',\n",
+    "    #    'valueImperviousfraction', 'valueTreefraction', 'valueBuildingheight',\n",
     "      #  'valueNearestDistWater',\n",
-    "         'valueWaterfraction', 'valueBuildingfraction',\n",
+    "        #  'valueWaterfraction', 'valueBuildingfraction',\n",
     "        #   'horizontal_wind','vertical_wind'\n",
     "          ]\n",
     "\n",
@@ -5071,7 +5095,7 @@
     "print(model_name)\n",
     "global_dictn = {}\n",
     "\n",
-    "hour_ranges = [0]\n",
+    "hour_ranges = [0,1]\n",
     "for hour in hour_ranges:\n",
     "    predictor = predictor_oop.Predictor(model_name,hour_filter=[hour],wind_data=False)\n",
     "    #setting ec_data for this predictor to be only for that hour\n",
@@ -5093,6 +5117,13 @@
     "        visualizer.get_plot(global_dictn[items][0],global_dictn['bound'], cmap = 'coolwarm',change_null=True,plot_boundary=True,hour=items,model_name=predictor.model.__class__.__name__,dpi=600,save=False)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
